Fix /bench-compare to avoid stale-jar classpath trap and use JMH Main directly